<?xml version="1.0" encoding="utf-8"?>
<resources>

     <color name="Green">#00ff00</color>
     <color name="Orange">#FFA500</color>
     <color name="Red">#FF0000</color>
     <color name="Black">#000000</color>
     <color name="Blue">#0000FF</color>
     <color name="White">#FFFFFF</color>
     <color name="Gray">#404040</color>
     
    <string name="ReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
	<string name="NoSDCard">IMIS needs external memory card to run. Please insert memory card and restart the application.</string>
	<string name="ForceClose">Force Close</string>
	<string name="OfflineMode">Offline Mode</string>
    <string name="FileNOtFound">File not found.</string>
    <string name="ContentTitle">New release of Claim Management is now available.</string>
   	<string name="ContentText">Click here to download.</string>
   	<string name="NotificationAlertText">New update available.</string>
    <string name="SDCardReadOnly">SD Card is set to readonly mode. Please set the mode to read/write and restart the application.</string>
	<string name="SDCardMissing">Application needs external memory card to run. Please insert memory card and restart the application.</string>
	<string name="FTPConnectionFailed">Unable to connect the server. Operation aborted.</string>
	
	
    <string name="app_name">Claim Management</string>
    <string name="ManageBatch">MANAGE BATCH</string>
    <string name="ManageClaims">MANAGE CLAIMS</string>
    <string name="Submit">SUBMIT</string>
	<string name="HFCode">Health facility code</string>
	<string name="ClaimAdmin">Claim Admin</string>
	<string name="BatchCode">Batch Code</string>
	<string name="PeriodFrom">Period From</string>
	<string name="PeriodTo">Period To</string>
	<string name="BatchDate">Batch Date</string>
	<string name="CHFID">Insurance No</string>
	<string name="StartDate">Start Date</string>
	<string name="EndDate">End Date</string>
	<string name="Diagnosis">Diagnosis</string>
	<string name="Diagnosis1">Diagnosis 1</string>
	<string name="Diagnosis2">Diagnosis 2</string>
	<string name="Diagnosis3">Diagnosis 3</string>
	<string name="Diagnosis4">Diagnosis 4</string>
	<string name="VisitType">Visit Type</string>
	<string name="Quantity">Quantity</string>
	<string name="Amount">Amount</string>
	<string name="Price">Price</string>
	<string name="SelectItem">Please select an item</string>
	<string name="SelectService">Please select a service</string>
	<string name="Add">Add</string>
	<string name="HealthFacility">Health Facility Code</string>
	<string name="ClaimCode">Claim Code</string>
	<string name="Scan">Scan</string>
	<string name="Item">Item</string>
	<string name="Service">Service</string>
	<string name="Total">Total</string>
	<string name="MissingHealthFacility">Please enter Health Facility Code</string>
	<string name="MissingClaimAdmin">Please enter Claim Admin Code</string>
	<string name="MissingClaimCode">Please enter Claim Code</string>
	<string name="MissingCHFID">Pleae enter CHFID</string>
	<string name="InvalidCHFID">Invalid CHFID</string>
	<string name="MissingStartDate">Please enter Start Date</string>
	<string name="MissingEndDate">Please enter End Date</string>
	<string name="MissingClaim">Please select atleast one item or service to submit the claim.</string>
	<string name="MissingDisease">Please select disease.</string>
	<string name="BiggerDate">End date cannot be smaller than the Start date.</string>
	<string name="AfterCurrentDate">End date cannot be later than the current date.</string>
	<string name="Ok">OK</string>
	<string name="ClaimPosted">Claim is posted successfully.</string>
	<string name="Yes">Yes</string>
	<string name="No">No</string>
	<string name="ConfirmDiscard">There is an unsaved claim. Do you want to discard and start new claim?</string>
	<string name="Of">of</string>
	<string name="Uploading">Uploading&#8230;</string>
	<string name="UploadAllClaims">Upload Claims</string>
	<string name="NoClaim">No claim found to upload.</string>
	<string name="CheckInternet">Claim management requires internet connection to upload data on the server.</string>
	<string name="BulkUpload">Data has been uploaded successfully. Please check your Rejected/Accepted folder to verify the server response.</string>
	<string name="MapItems">Map Items</string>
	<string name="MapServices">Map Services</string>
	<string name="Saving">Saving&#8230;</string>
	<string name="Emergency">Emergency</string>
	<string name="Referral">Referral</string>
	<string name="Other">Other</string>
	<string name="MissingVisitType">Please select visit type.</string>
	
	<string name="Back">Back</string>
	<string name="New">New Claim</string>
	<string name="Save">Post this Claim</string>
	<string name="Cancel">Cancel</string>
	<string name="Delete">Delete</string>
	<string name="AddItems">Add Items</string>
	<string name="AddServices">Add Services</string>
	<string name="SelectDisease">Please select disease code</string>
	<string name="CheckUncheck">Check/Uncheck All</string>
	<string name="SaveMap">Save</string>
	<string name="NoItemMapped">No mapped item found</string>
	<string name="MappedItemMissing">In order to add an item to the claim please click menu and select the option Map Items.</string>
	<string name="NoServiceMapped">No mapped service found</string>
	<string name="MappedServiceMissing">In order to add a service to the claim please click menu and select the option Map Services.</string>
	<string name="SearchItems">Search Items</string>
	<string name="SearchServices">Search Services</string>
	<string name="Statistics">Statistics</string>
	<string name="GetStats">Request Statistics</string>
	<string name="NoStatFound">No data found</string>
	<string name="InProgress">In Progress...</string>
	<string name="InternetRequired">Internet connection is required to view the statistics.</string>

</resources>